--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-файл один
+<!DOCTYPE html>
+<html lang="ua">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Нова Пошта</title>
+</head>
+<body>
+
+  <header>
+    <h1>Відстежити відправленняя</h1>
+    <nav>
+      <ul>
+        <li><a href="#home">Головна</a></li>
+        <li><a href="#about">Про нас</a></li>
+        <li><a href="#contact">НКЦ</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section id="home">
+      <h2>Вітання</h2>
+      <p>ЗАВТРА ЮУДЕ.</p>
+    </section>
